[package]
name = "micro-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
bytes = "1.6.0"
atoi = "2.0.0"
structopt = "0.3.26"
tracing = "0.1.40"
tracing-futures = "0.2.5"